student collection added to database
